cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)
project (gomibako CXX)
aux_source_directory (src DIR_SRCS)
include_directories ("include")
set (LINK_LIBS yaml-cpp)
if (APPLE)
  option (MACPORTS "Build with the library of macports." ON)
else (APPLE)
  option (MACPORTS "Build with the library of macports." OFF)
endif (APPLE)
if (MACPORTS)
  include_directories ("/opt/local/include")
  link_directories ("/opt/local/lib")
  set (LINK_LIBS ${LINK_LIBS} boost_date_time-mt boost_system-mt)
else (MACPORTS)
  set (LINK_LIBS ${LINK_LIBS} boost_date_time boost_system)
endif (MACPORTS)
add_subdirectory (src/theme_clean)
add_executable (gomibako ${DIR_SRCS})
set_property (TARGET gomibako PROPERTY CXX_STANDARD 11)
set_property (TARGET gomibako PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries (gomibako ${LINK_LIBS})